--- a/app/Resources/views/register/index.html.twig
+++ b/app/Resources/views/register/index.html.twig
@@ -13,6 +13,8 @@
     <div class="login-main">
       {% if isRegisterEnabled %}
         <form id="register-form" method="post" action="">
+          <input type="hidden" name="register_mode" value="{{ setting('auth.register_mode') }}"/>
+
           {{ web_macro.flash_messages() }}
 
           {% if inviteUser %}
@@ -45,14 +47,28 @@
               </div>
             </div>
           {% else %}
-            <div id="register_mode_switch">111111</div>
-            <div class="form-group mbl">
+            <div id="register_mode_switch"
+                 class="color-success"
+                 style="font-size: 16px; font-weight: 500; line-height: 22px; margin-bottom: 16px; cursor: pointer;"
+            ></div>
+            <div class="form-group mbl js-register_mobile_mode">
               <label class="control-label required"
-                     for="register_emailOrmobile">{{ 'user.register.account_with_mobile_or_email_label'|trans }}</label>
+                     for="register_mobile">{{ 'user.settings.security.password_reset.mobile'|trans }}</label>
               <div class="controls">
-                <input type="text" id="register_emailOrMobile" name="emailOrMobile" class="form-control input-lg"
-                       data-url="{{ path('register_email_or_mobile_check') }}"
-                       placeholder="{{ 'user.register.account_with_mobile_or_email_placeholder'|trans }}"
+                <input type="tel" id="register_mobile" name="verifiedMobile" class="form-control input-lg"
+                       data-url="{{ path('register_mobile_check') }}"
+                       placeholder="{{ 'user.register.account_with_mobile_placeholder'|trans }}"
+                       onkeydown="if(event.keyCode==13) return false;">
+                <p class="help-block"></p>
+              </div>
+            </div>
+            <div class="form-group mbl js-register_email_mode">
+              <label class="control-label required"
+                     for="register_email">{{ 'user.settings.security.password_reset.email'|trans }}</label>
+              <div class="controls">
+                <input type="email" id="register_email" name="email" class="form-control input-lg"
+                       data-url="{{ path('register_email_check') }}"
+                       placeholder="{{ 'user.register.account_with_email_placeholder'|trans }}"
                        onkeydown="if(event.keyCode==13) return false;">
                 <p class="help-block"></p>
               </div>
@@ -89,32 +105,29 @@
           </div>
           {% if (setting('auth.captcha_enabled')|default(0)) == 1 %}
             <div
-              class="form-group cd-mb32 js-drag-jigsaw {% if setting('auth.register_mode') == 'mobile' %}hidden{% endif %}">
+              class="form-group cd-mb32 js-drag-jigsaw">
               {% include 'common/drag.html.twig' with { auth: true } %}
             </div>
           {% endif %}
-          {% if setting('auth.register_mode') == 'email_or_mobile' or setting('auth.register_mode') == 'mobile' %}
-            <div
-              class="form-group mbl {% if setting('auth.register_mode') != 'mobile' %}hidden{% endif %} email_mobile_msg">
-              <label class="control-label required" for="sms_code">{{ 'user.settings.security.sms_code'|trans }}</label>
-              <div class="controls cd-row">
-                <div class="col-xs-6">
-                  <input type="text" maxlength="6" class="form-control input-lg" id="sms_code" name="sms_code"
-                         placeholder="{{ 'user.settings.security.input_sms_code'|trans }}"
-                         data-url="{{ path('edu_cloud_sms_check',{type:'sms_registration'}) }}"
-                         onkeydown="if(event.keyCode==13) return false;">
-                  <p class="help-block"></p>
-                </div>
-                <div class="col-xs-6">
-                  <a href="javascript:;" class="btn btn-default sms-send-btn js-sms-send-btn disabled"
-                     data-sms-url="{{ path('edu_cloud_sms_send_registration') }}">
-                    <span id="js-time-left"></span>
-                    <span id="js-fetch-btn-text">{{ 'user.settings.security.get_sms_code_btn'|trans }}</span>
-                  </a>
-                </div>
+          <div
+            class="form-group mbl email_mobile_msg">
+            <label class="control-label required js-email_mobile_msg-label" for="sms_code">{{ 'user.settings.security.sms_code'|trans }}</label>
+            <div class="controls cd-row">
+              <div class="col-xs-6">
+                <input type="text" maxlength="6" class="form-control input-lg" id="sms_code" name="sms_code"
+                       data-url="{{ path('edu_cloud_sms_check',{type:'sms_registration'}) }}"
+                       onkeydown="if(event.keyCode==13) return false;">
+                <p class="help-block"></p>
+              </div>
+              <div class="col-xs-6">
+                <a href="javascript:;" class="btn btn-default sms-send-btn js-code-send-btn disabled"
+                   data-sms-url="{{ path('edu_cloud_sms_send_registration') }}">
+                  <span id="js-time-left"></span>
+                  <span id="js-fetch-btn-text">{{ 'user.settings.security.get_sms_code_btn'|trans }}</span>
+                </a>
               </div>
             </div>
-          {% endif %}
+          </div>
 
           {% if (setting('invite.invite_code_setting')|default(0) == 1) and not inviteUser %}
             <div class="form-group mbl">
