--- a/app/Resources/views/admin-v2/teach/question-tag/index.html.twig
+++ b/app/Resources/views/admin-v2/teach/question-tag/index.html.twig
@@ -1,9 +1,9 @@
 {% extends 'admin-v2/content-layout.html.twig' %}
 
-{#{% do script(['vue3/js/admin-v2/system/contract/index.js']) %}#}
+{% do script(['vue3/js/admin-v2/teach/question-tag/index.js']) %}
 
 {% set menu = 'admin_v2_question_tag_manage' %}
 
 {% block main %}
-    <div id="app">111111</div>
+    <div id="app"></div>
 {% endblock %}
