--- a/app/Resources/views/item-bank-exercise-manage/panel-header/exercise-publish-header.html.twig
+++ b/app/Resources/views/item-bank-exercise-manage/panel-header/exercise-publish-header.html.twig
@@ -10,7 +10,8 @@
   'orders':'course.order'|trans,
   'overview' :'course.plan_overview'|trans,
   'live-statistics':'course.live_statistics'|trans,
-  'wrong_questions':'学员错题'|trans
+  'wrong_questions':'学员错题'|trans,
+  'ai-companion-study':'AI伴学助手'|trans
 }
 %}
 
