--- a/app/Resources/views/item-bank-exercise-manage/exercise-set/sidebar.html.twig
+++ b/app/Resources/views/item-bank-exercise-manage/exercise-set/sidebar.html.twig
@@ -45,6 +45,13 @@
             {{ '学员错题'|trans }}
           </a>
         </li>
+        {# AI伴学服务 #}
+        <li class="cd-sidebar__item {% if course_side_nav == 'ai-companion-study' %}active{% endif %}" style="position: relative">
+          <div style="color: white; font-size: 12px; line-height: 16px; font-weight: 500; padding: 0 6px; background-color: #FF4D4F; border-radius: 6px 6px 6px 0; position: absolute; left: 105px; top: 5px">NEW</div>
+          <a href="{{ path('item_bank_exercise_manage_ai_companion_study', {exerciseId:exercise.id}) }}">
+            AI伴学服务
+          </a>
+        </li>
       </div>
     </ul>
   </div>
