feat: 112977 错题练习-一题一答答题页面切换按钮会被提交按钮遮挡【填空题

--- a/h5/src/h5/src/styles/components/item-engine/itembank.scss
+++ b/h5/src/h5/src/styles/components/item-engine/itembank.scss
@@ -77,6 +77,7 @@ $common-padding: 35;
 
 	.ibs-question-swiper {
 		position: relative;
+		height: 100%;
 		padding-bottom: vw(60);
 	}
 
@@ -707,11 +708,12 @@ $common-padding: 35;
 	}
 
 	.ibs-submit-footer {
-		bottom: vw(0);
+		position: fixed;
+		bottom: vw(-60);
 		height: vw(55);
 		padding: vw(6) vw(10);
 		background-color: #fff;
-		transform: translateY(50%);
+		//transform: translateY(50%);
 
 		.ibs-submit-footer-btn {
 			height: vw(40);
