feat: #113211 直播课时上传回放，任务完成条件为进入直播间，学员进入学习，学习状态显示未完成【微网校】

--- a/h5/src/h5/assets/styles/containers/course/index.scss
+++ b/h5/src/h5/assets/styles/containers/course/index.scss
@@ -289,6 +289,7 @@
 			height: 30px;
 			color: #fff;
 			font-size: vw(14);
+			background: $primary-color;
 			border: 1px solid  #fff;
 			border-radius: vw(30);
 		}
