--- a/app/Resources/views/admin-v2/teach/cloud-file/form/res-filter.html.twig
+++ b/app/Resources/views/admin-v2/teach/cloud-file/form/res-filter.html.twig
@@ -9,7 +9,7 @@
       </select>
       <input class="form-control form-control-input form-space" maxlength="50" name="keywords" placeholder="{{ 'admin.cloud_file.keyword_placeholder'|trans }}">
     </div>
-    
+
     <div class="form-group es-materials-filter col-sm-6">
       <label>{{ 'admin.cloud_file.upload_time'|trans }}</label>
       <input class="form-control form-control-input-sm mrm" type="text" id="startDate" autocomplete="off" name="startDate" value="" placeholder="{{ 'form.placeholder.start_date'|trans }}">
@@ -19,7 +19,7 @@
   </div>
   <div class="form-inline row">
     <div class="form-group col-sm-5">
-    <label>{{ 'admin.cloud_file.transcode_status'|trans }}</label>
+      <label>{{ 'admin.cloud_file.transcode_status'|trans }}</label>
       <select class="form-control js-process-status-select form-control-input-md" name="convertStatus">
         <option value="">{{ 'admin.cloud_file.select_placeholeder'|trans }}</option>
         <option value="waiting">{{ 'material.common_table.transcode_waiting'|trans }}</option>
@@ -29,6 +29,7 @@
         <option value="nonsupport">{{ 'material.common_table.transcode_file_not_support'|trans }}</option>
         <option value="noneed">{{ 'material.common_table.no_need_transcode'|trans }}</option>
       </select>
+      <div id="ant-category" style="display: inline-block;"></div>
     </div>
     {% if pageType == 'file' %}
       <div class="form-group col-sm-6">
