--- a/app/Resources/views/admin-v2/teach/cloud-file/manage.html.twig
+++ b/app/Resources/views/admin-v2/teach/cloud-file/manage.html.twig
@@ -2,6 +2,7 @@
 
 {% set menu = 'admin_v2_cloud_file' %}
 {% do load_script('cloudfile/manage') %}
+{% do script(['vue3/js/admin-v2/teach/cloud-file/index.js']) %}
 
 {% block stylesheets %}
   {{ parent() }}
