feat: #113175 完成云资源可以根据分类搜索

--- a/app/Resources/views/admin-v2/teach/cloud-file/form/res-filter.html.twig
+++ b/app/Resources/views/admin-v2/teach/cloud-file/form/res-filter.html.twig
@@ -30,6 +30,7 @@
         <option value="noneed">{{ 'material.common_table.no_need_transcode'|trans }}</option>
       </select>
       <div id="ant-category" style="display: inline-block;"></div>
+      <input type="hidden" name="categoryId">
     </div>
     {% if pageType == 'file' %}
       <div class="form-group col-sm-6">
