feat: #113174 云资源列表显示分类

--- a/app/Resources/views/admin-v2/teach/cloud-file/res-table-tr.html.twig
+++ b/app/Resources/views/admin-v2/teach/cloud-file/res-table-tr.html.twig
@@ -79,6 +79,12 @@
       </td>
     {% endif %}
 
+    {% if pageType == 'file' %}
+      <td class="vertical-middle">
+        <span style="display:block">{{ categories[cloudFile.categoryId].name|default('-') }}</span>
+      </td>
+    {% endif %}
+
     {# 转码进度 #}
     <td class="vertical-middle">
     {% if cloudFile.storage == "cloud" %}
