feat: #113175 管理后台，云资源可以按分类搜索，可以设置分类（前端）

--- a/app/Resources/views/admin-v2/teach/cloud-file/form/res-filter.html.twig
+++ b/app/Resources/views/admin-v2/teach/cloud-file/form/res-filter.html.twig
@@ -29,7 +29,7 @@
         <option value="nonsupport">{{ 'material.common_table.transcode_file_not_support'|trans }}</option>
         <option value="noneed">{{ 'material.common_table.no_need_transcode'|trans }}</option>
       </select>
-      <div id="ant-category" style="display: inline-block;"></div>
+      <div id="ant-category-select" style="display: inline-block;"></div>
       <input type="hidden" name="categoryId">
     </div>
     {% if pageType == 'file' %}
