--- a/app/Resources/views/admin-v2/teach/cloud-file/res-table-tr.html.twig
+++ b/app/Resources/views/admin-v2/teach/cloud-file/res-table-tr.html.twig
@@ -83,6 +83,9 @@
       <td class="vertical-middle">
         <span style="display:block">{{ categories[cloudFile.categoryId].name|default('-') }}</span>
       </td>
+      <td class="vertical-middle">
+        <span style="display:block">{{ '0' }}</span>
+      </td>
     {% endif %}
 
     {# 转码进度 #}
