--- a/app/Resources/views/admin-v2/teach/cloud-file/res-table-tr.html.twig
+++ b/app/Resources/views/admin-v2/teach/cloud-file/res-table-tr.html.twig
@@ -84,7 +84,7 @@
         <span style="display:block">{{ categories[cloudFile.categoryId].name|default('-') }}</span>
       </td>
       <td class="vertical-middle">
-        <span style="display:block">{{ '0' }}</span>
+        <a onclick="window.emitter.emit('open-referenced-course-modal', {id: {{cloudFile.id}}, referencedCourse: {{0}} })" style="display:block; cursor: pointer;">{{ '0' }}</a>
       </td>
     {% endif %}
 
