feat: #113506 密码校验规则调整

--- a/app/Resources/views/admin-v2/user/user-manage/staff-manage/create-by-mobile-or-email-modal.html.twig
+++ b/app/Resources/views/admin-v2/user/user-manage/staff-manage/create-by-mobile-or-email-modal.html.twig
@@ -40,7 +40,7 @@
           <img src="{{ asset('static-dist/app/img/open_eye.svg') }}" class="js-password-open-eye" alt="" style="position: absolute; right: 6px; top: 5px; cursor: pointer; display: none"/>
           <img src="{{ asset('static-dist/app/img/close_eye.svg') }}" class="js-password-close-eye" alt="" style="position: absolute; right: 6px; top: 5px; cursor: pointer; display: block"/>
         </div>
-        <p class="help-block">{{ 'admin.user.fields.password_hint.high'|trans }}</p>
+        <p class="help-block">{{ 'password.hint.strong'|trans }}</p>
       </div>
     </div>
 
