--- a/app/Resources/views/password-reset/index.html.twig
+++ b/app/Resources/views/password-reset/index.html.twig
@@ -68,7 +68,7 @@
               <img src="{{ asset('static-dist/app/img/open_eye.svg') }}" class="js-reset-password-open-eye" alt="" style="position: absolute; right: 8px; top: 5px; cursor: pointer; display: none"/>
               <img src="{{ asset('static-dist/app/img/close_eye.svg') }}" class="js-reset-password-close-eye" alt="" style="position: absolute; right: 8px; top: 5px; cursor: pointer; display: block"/>
             </div>
-            <p class="help-block" style="margin-top: 0">{{ 'user.settings.password_level.high'|trans }}</p>
+            <p class="help-block" style="margin-top: 0">{{ 'password.hint.normal'|trans }}</p>
           </div>
         </div>
 
