--- a/app/Resources/views/settings/password.html.twig
+++ b/app/Resources/views/settings/password.html.twig
@@ -32,11 +32,11 @@
           {{'user.settings.security.password_modify.new_password'|trans}}
         </label>
         <div style="position: relative">
-          <input type="password" id="form_newPassword" name="newPassword" required="required" class="form-control" placeholder="{{ 'user.settings.security.password_modify.new_password_placeholder'|trans }}" style="padding-right: 25px">
+          <input type="password" id="form_newPassword" name="newPassword" required="required" data-strong="{{ needStrongPassword }}" class="form-control" placeholder="{{ 'user.settings.security.password_modify.new_password_placeholder'|trans }}" style="padding-right: 25px">
           <img src="{{ asset('static-dist/app/img/open_eye.svg') }}" class="js-new-password-open-eye" alt="" style="position: absolute; right: 0; top: 3px; cursor: pointer; display: none"/>
           <img src="{{ asset('static-dist/app/img/close_eye.svg') }}" class="js-new-password-close-eye" alt="" style="position: absolute; right: 0; top: 3px; cursor: pointer; display: block"/>
         </div>
-        <div class="js-new-password-tip" style="font-size: 12px; line-height: 20px; margin-bottom: 10px">{{'user.settings.password_level.high'|trans}}</div>
+        <div class="js-new-password-tip" style="font-size: 12px; line-height: 20px; margin-bottom: 10px">{{ needStrongPassword ? 'password.hint.strong'|trans : 'password.hint.normal'|trans}}</div>
       </div>
 
       <div class="form-group cd-form-group cd-mb24">
