--- a/app/Resources/views/password-reset/update.html.twig
+++ b/app/Resources/views/password-reset/update.html.twig
@@ -16,11 +16,11 @@
 						{{ form_label(form.password, 'user.settings.security.password_modify.new_password'|trans, {label_attr:{class:'control-label'}}) }}
 						<div class="controls">
               <div style="position: relative">
-                <input type="password" id="form_password" name="form[password]" required="required" class="form-control" aria-required="true" style="padding-right: 40px">
+                <input type="password" id="form_password" name="form[password]" required="required" data-strong="{{ needStrongPassword }}" class="form-control" aria-required="true" style="padding-right: 40px">
                 <img src="{{ asset('static-dist/app/img/open_eye.svg') }}" class="js-password-open-eye" alt="" style="position: absolute; right: 8px; top: 5px; cursor: pointer; display: none"/>
                 <img src="{{ asset('static-dist/app/img/close_eye.svg') }}" class="js-password-close-eye" alt="" style="position: absolute; right: 8px; top: 5px; cursor: pointer; display: block"/>
               </div>
-              <p class="help-block">{{ 'user.settings.password_level.high'|trans }}</p>
+              <p class="help-block">{{ needStrongPassword ? 'password.hint.strong'|trans : 'password.hint.normal'|trans}}</p>
 						</div>
 					</div>
 
