feat: #113506 密码校验规则调整

--- a/app/Resources/views/admin-v2/user/user-manage/staff-manage/change-password-modal.html.twig
+++ b/app/Resources/views/admin-v2/user/user-manage/staff-manage/change-password-modal.html.twig
@@ -32,11 +32,11 @@
       <div class="col-md-3 control-label"><label for="newPassword">{{'admin.user.manage.change_password.new_password_label'|trans}}</label></div>
       <div class="col-md-8 controls">
         <div style="position: relative;">
-          <input class="form-control" type="password" id="newPassword" value="" name="newPassword">
+          <input class="form-control" type="password" id="newPassword" value="" name="newPassword" data-strong="1">
           <img src="{{ asset('static-dist/app/img/open_eye.svg') }}" class="js-new-password-open-eye" alt="" style="position: absolute; right: 6px; top: 5px; cursor: pointer; display: none"/>
           <img src="{{ asset('static-dist/app/img/close_eye.svg') }}" class="js-new-password-close-eye" alt="" style="position: absolute; right: 6px; top: 5px; cursor: pointer; display: block"/>
         </div>
-        <p class="help-block">{{ 'admin.user.fields.password_hint.high'|trans }}</p>
+        <p class="help-block">{{ 'password.hint.strong'|trans }}</p>
       </div>
     </div>
 
