feat: #113228 填空题答题支持数学公式

--- a/app/Resources/static-src/app/less/main.less
+++ b/app/Resources/static-src/app/less/main.less
@@ -115,6 +115,7 @@
 @import 'module/task-list.less';      // 任务列表
 @import 'module/alert-notice.less';   // 全站公告
 @import 'module/aside-notice.less';   // 站内公告
+@import 'module/math-editor-modal.less';
 
 // 页面---------------------------------------------------------------//
 @import "page/index.less";                //首页
