--- a/app/Resources/static-src/app/less/page/question-bank/list.less
+++ b/app/Resources/static-src/app/less/page/question-bank/list.less
@@ -174,6 +174,30 @@
     border-left: 1px solid rgba(225,225,225,1);
     padding-left: 20px;
   }
+
+  .question-bank-tag-list {
+    display: flex;
+    .tag-label {
+      text-wrap: nowrap;
+      margin-top: 2px;
+    }
+    .question-bank-tag-container {
+      padding: 0;
+      .tag {
+        display: inline-block;
+        color: rgba(0, 0, 0, 0.45);
+        padding: 0 3px;
+        font-size: 12px;
+        font-weight: 400;
+        border: 1px solid #D9D9D9;
+        border-radius: 4px;
+        line-height: 16px;
+        margin-right: 4px;
+        margin-bottom: 6px;
+      }
+    }
+  }
+
 }
 
 .question-category-panel {
@@ -253,7 +277,7 @@
     font-weight: 400;
     text-align: center;
     font-size: 14px;
-    line-height: 22px; 
+    line-height: 22px;
   }
 }
 
