--- a/app/Resources/static-src/app/less/page/question-bank/model.less
+++ b/app/Resources/static-src/app/less/page/question-bank/model.less
@@ -58,4 +58,27 @@
       color:rgba(50,50,50,1);
     }
   }
+
+  .item-tag-list {
+    display: flex;
+    .tag-label {
+      text-wrap: nowrap;
+      margin-top: 2px;
+    }
+    .item-tag-container {
+      padding: 0;
+      .tag {
+        display: inline-block;
+        color: rgba(0, 0, 0, 0.45);
+        padding: 0 3px;
+        font-size: 12px;
+        font-weight: 400;
+        border: 1px solid #D9D9D9;
+        border-radius: 4px;
+        line-height: 16px;
+        margin-right: 4px;
+        margin-bottom: 6px;
+      }
+    }
+  }
 }
