--- a/app/Resources/views/question-bank/testpaper/manage/testpaper-form.html.twig
+++ b/app/Resources/views/question-bank/testpaper/manage/testpaper-form.html.twig
@@ -19,7 +19,7 @@
 
   <div>
     {% include 'question-bank/header-navbar.html.twig' %}
-    <div class="panel panel-default panel-col">
+    <div class="panel panel-default panel-col testpaper-manage-form">
       {% block panel_body %}
         <div class="panel-body question-list-container js-testpaper-container">
           <div class="mtl">
