--- a/app/Resources/static-src/app/less/page/question-bank/index.less
+++ b/app/Resources/static-src/app/less/page/question-bank/index.less
@@ -3,6 +3,7 @@
 @import "model.less";
 @import "duplicative.less";
 @import "update-duplicative.less";
+@import "testpaper-manage.less";
 .question-bank__model-tips{
   margin-bottom: 20px;
   padding-left: 14px;
