--- a/app/Resources/static-src/app/less/page/login.less
+++ b/app/Resources/static-src/app/less/page/login.less
@@ -114,6 +114,14 @@
     padding: 9px 10px;
     width: 100%;
   }
+
+  .register_mode_switch {
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 22px;
+    margin-bottom: 16px;
+    cursor: pointer;
+  }
 }
 
 .drag-section-wrap {
