--- a/app/Resources/views/register/index.html.twig
+++ b/app/Resources/views/register/index.html.twig
@@ -48,12 +48,10 @@
                  class="color-success register_mode_switch"
             ></div>
             <div class="form-group mbl js-register_email_or_mobile_mode">
-              <label class="control-label required"
-                     for="register_emailOrMobile">{{ 'user.settings.security.password_reset.mobile'|trans }}</label>
+              <label class="control-label required" for="register_emailOrMobile"></label>
               <div class="controls">
                 <input type="tel" id="register_emailOrMobile" name="emailOrMobile" class="form-control input-lg"
                        data-url="{{ path('register_email_or_mobile_check') }}"
-                       placeholder="{{ 'user.register.account_with_mobile_placeholder'|trans }}"
                        onkeydown="if(event.keyCode==13) return false;">
                 <p class="help-block"></p>
               </div>
