--- a/app/Resources/views/register/index.html.twig
+++ b/app/Resources/views/register/index.html.twig
@@ -96,7 +96,7 @@
             <label class="control-label required js-email_mobile_msg-label" for="sms_code">{{ 'user.settings.security.sms_code'|trans }}</label>
             <div class="controls cd-row">
               <div class="col-xs-6">
-                <input type="text" maxlength="6" class="form-control input-lg" id="sms_code" name="sms_code"
+                <input type="text" maxlength="6" class="form-control input-lg js-email_mobile_msg-input" id="sms_code" name="sms_code"
                        data-url="{{ path('edu_cloud_sms_check',{type:'sms_registration'}) }}"
                        onkeydown="if(event.keyCode==13) return false;">
                 <p class="help-block"></p>
