bugfix: #113683 修复试题查重页面标签显示错误

--- a/app/Resources/static-src/app/less/page/question-bank/duplicative.less
+++ b/app/Resources/static-src/app/less/page/question-bank/duplicative.less
@@ -31,7 +31,7 @@
         font-weight: 400;
         text-align: center;
         font-size: 14px;
-        line-height: 22px; 
+        line-height: 22px;
     }
 
     .introjs-skipbutton {
@@ -47,7 +47,7 @@
         font-weight: 400;
         text-align: center;
         font-size: 14px;
-        line-height: 22px; 
+        line-height: 22px;
     }
 }
 
@@ -264,6 +264,7 @@
     }
 
     .question-body {
+        padding-top: 12px;
         min-height: 548px;
         padding-bottom: 16px;
         font-size: 14px;
@@ -276,7 +277,7 @@
         width: 7%;
         position: absolute;
         left: 16px;
-        top: 32px;
+        top: 16px;
         text-align: right;
         z-index: 1;
         background-color: #fff;
