fix: #113694 用户管理-添加用户页面，密码显示开关点击没有效果

--- a/app/Resources/static-src/app/less/admin-v2/layout.less
+++ b/app/Resources/static-src/app/less/admin-v2/layout.less
@@ -3,6 +3,11 @@ body {
   color: #333;
 }
 
+input[type="password"]::-ms-reveal,
+input[type="password"]::-ms-clear {
+  display: none;
+}
+
 .admin-ie-body {
   height: auto !important;
 }
