--- a/app/Resources/static-src/app/less/common/common.less
+++ b/app/Resources/static-src/app/less/common/common.less
@@ -28,6 +28,11 @@ html.nav-active body {
   height: 100%;
 }
 
+input[type="password"]::-ms-reveal,
+input[type="password"]::-ms-clear {
+  display: none;
+}
+
 .es-wrap {
   &.nav-active {
     .es-transition();
