--- a/app/Resources/views/register/index.html.twig
+++ b/app/Resources/views/register/index.html.twig
@@ -158,6 +158,7 @@
             </div>
           {% endif %}
 
+          <input type="hidden" name="emailToken" value="">
           <input type="hidden" name="captcha_enabled" value="{{ setting('auth.captcha_enabled') }}"/>
           <input type="hidden" name="_csrf_token" value="{{ csrf_token('site') }}">
           <input type="hidden" name="registerVisitId" value="">
