--- a/h5/src/h5/assets/styles/containers/course/detail/afterjoin-directory.scss
+++ b/h5/src/h5/assets/styles/containers/course/detail/afterjoin-directory.scss
@@ -227,6 +227,16 @@
             padding-bottom: 4px;
             vertical-align: top;
           }
+
+          .last-learn-task {
+            color: #ffffff;
+            font-size: 12px;
+            font-weight: 400;
+            line-height: 20px;
+            padding: 0 4px;
+            background-color: #FF706B;
+            border-radius: 4px;
+          }
         }
       }
 
@@ -275,6 +285,7 @@
         margin-left: 26px;
         color: #408ffb;
         font-size: vw(12);
+        margin-right: 8px;
       }
 
       .bl {
