--- a/h5/src/h5/assets/styles/modules/e-class/index.scss
+++ b/h5/src/h5/assets/styles/modules/e-class/index.scss
@@ -14,6 +14,27 @@
   justify-content:space-between;
 }
 
+.e-course-last_learn_task-container {
+  display: flex;
+  align-items: center;
+  border-radius: 4px;
+  background: rgba(61, 205, 127, 0.05);
+  padding: 2px 8px;
+  margin-top: 8px;
+  .icon {
+    margin-right: 4px;
+  }
+  .text {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    font-size: 12px;
+    font-weight: 400;
+    color: #37A367;
+    line-height: 20px;
+  }
+}
+
 .switch-box__price {
   font-size: vw(14);
   p {
