feat: #113184 pc端上次学习

--- a/app/Resources/static-src/app/less/main-color/index.less
+++ b/app/Resources/static-src/app/less/main-color/index.less
@@ -45,6 +45,7 @@
 @import '../module/note-main-color.less';
 @import '../module/task-list-main-color.less';
 @import '../module/topic-main-color.less';
+@import '../module/course-learn-history.less';
 
 // plugin
 @import '../plugin/select2-main-color.less';
