--- a/app/Resources/static-src/app/less/v2/page/my-course.less
+++ b/app/Resources/static-src/app/less/v2/page/my-course.less
@@ -171,6 +171,106 @@
       min-width: 200px;
     }
   }
+
+  .my-course-item-course {
+    display: flex;
+    align-items: center;
+    gap: 54px;
+
+    @media (max-width: @screen-xs-max) {
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 20px;
+    }
+
+    .my-course-item-course__info {
+      display: flex;
+      align-items: center;
+      gap: 26px;
+      width: 100%;
+
+      @media (max-width: @screen-xs-max) {
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 20px;
+      }
+    }
+
+    .my-course-item-course__link {
+      @media (max-width: @screen-xs-max) {
+        width: 100%;
+      }
+    }
+
+    .my-course-item-course__detail {
+      display: flex;
+      width: 100%;
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 23px;
+
+      @media (max-width: @screen-xs-max) {
+        gap: 20px;
+      }
+    }
+
+    .my-course-item-course__title {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 4px;
+    }
+
+    .my-course-item-course__learn {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 8px;
+      align-self: stretch;
+    }
+
+    .my-course-item-course__progress {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      align-self: stretch;
+
+      .cd-progress {
+        display: flex;
+        width: 276px;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+      }
+
+      .progress-bar {
+        display: flex;
+        width: 100%;
+        padding-right: 0;
+      }
+
+      .progress-outer {
+        width: 100%;
+      }
+    }
+
+    .my-course-item-course__empty {
+      height: 22px;
+
+      @media (max-width: @screen-xs-max) {
+        display: none;
+      }
+    }
+
+    .my-course-item-course__btn {
+      @media (max-width: @screen-xs-max) {
+        width: 100%;
+        .btn {
+          width: 100%;
+        }
+      }
+    }
+  }
 }
 
 
