--- a/app/Resources/views/item-bank-exercise-manage/ai-companion-study/index.html.twig
+++ b/app/Resources/views/item-bank-exercise-manage/ai-companion-study/index.html.twig
@@ -6,7 +6,7 @@
 
 {% block main %}
   <div id="ai-companion-study"
-       data-item-bank-id="{{ questionBank.id }}"
+       data-exercise-id="{{ exercise.id }}"
        style="padding: 0; margin-left: 200px"
   ></div>
 {% endblock %}
