feat: #113180 题库练习支持AI伴学助手

--- a/app/Resources/views/item-bank-exercise/my/my-exercise-show.html.twig
+++ b/app/Resources/views/item-bank-exercise/my/my-exercise-show.html.twig
@@ -49,4 +49,9 @@
       </div>
     {% endif %}
   {% endblock %}
+
+  {% if exercise.isAgentActive %}
+    <input type="hidden" id="aiAgentToken" value="{{ ai_agent_token() }}" />
+    <input type="hidden" id="chatMetaData" value="{{ get_item_bank_exercise_chat_meta_data(exercise) }}" />
+  {% endif %}
 {% endblock %}
