--- a/app/Resources/static-src/app/less/main.less
+++ b/app/Resources/static-src/app/less/main.less
@@ -116,6 +116,7 @@
 @import 'module/alert-notice.less';   // 全站公告
 @import 'module/aside-notice.less';   // 站内公告
 @import 'module/math-editor-modal.less';
+@import 'module/course-learn-history.less';
 
 // 页面---------------------------------------------------------------//
 @import "page/index.less";                //首页
