--- a/app/Resources/static-src/app/less/item-bank/components/item-manage/answer-model.less
+++ b/app/Resources/static-src/app/less/item-bank/components/item-manage/answer-model.less
@@ -287,6 +287,15 @@
     margin-bottom: 16px;
     display: flex;
     justify-content: space-between;
+    .answer-mode-tag {
+      color: @primary-color;
+      font-size: 14px;
+      font-weight: 400;
+      line-height: 20px;
+      padding: 2px 8px;
+      border-radius: 4px;
+      border: 1px solid @primary-color;
+    }
   }
 }
 
