--- a/app/Resources/views/item-bank-exercise/explore/exercise-grid.html.twig
+++ b/app/Resources/views/item-bank-exercise/explore/exercise-grid.html.twig
@@ -17,16 +17,18 @@
 
       {% set exercise = exercise|wrap('itemBankExercise.price') %}
 
-      <span class="course-price-widget">
-          <span class="
-            {% if exercise.price == 0 %}
-                  free
-            {% else %}
-                  price
-            {% endif %}">
-            {{ exercise.priceWrapper.priceText }}
-          </span>
-      </span>
+      {% if exercise.hidePrice != 1 %}
+        <span class="course-price-widget">
+            <span class="
+              {% if exercise.price == 0 %}
+                    free
+              {% else %}
+                    price
+              {% endif %}">
+              {{ exercise.priceWrapper.priceText }}
+            </span>
+        </span>
+      {% endif %}
 
     </div>
   </div>
