--- a/app/Resources/views/classroom/classroom-price.html.twig
+++ b/app/Resources/views/classroom/classroom-price.html.twig
@@ -1,12 +1,14 @@
 {% set classroom = classroom|wrap('classroom.price') %}
 
-<span class="pull-right">
-  <span class="
-    {% if classroom.price == 0 %}
-          color-success
-    {% else %}
-          color-danger
-    {% endif %}">
-    {{ classroom.priceWrapper.priceText }}
+{% if classroom.hidePrice != '1' %}
+  <span class="pull-right">
+    <span class="
+      {% if classroom.price == 0 %}
+            color-success
+      {% else %}
+            color-danger
+      {% endif %}">
+      {{ classroom.priceWrapper.priceText }}
+    </span>
   </span>
-</span>
+{% endif %}
